syntax = "proto3";

option go_package = "github.com/kong/koko/internal/gen/wrpc/kong/model;model";

package kong.model;

import "kong/model/certificate.proto";

message Service {
  string id = 1;
  string name = 2;
  int64 connect_timeout = 3;
  int64 created_at = 4;
  string host = 5;
  string path = 6;
  int64 port = 7;
  string protocol = 8;
  int64 read_timeout = 9;
  int64 retries = 10;
  int64 updated_at = 11;
  string url = 12;
  int64 write_timeout = 13;
  repeated string tags = 14;
  bool tls_verify = 15;
  int64 tls_verify_depth = 16;
  Certificate client_certificate = 17;
  repeated string ca_certificates = 18;
}
